--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "parcel": "^2.9.3"
   },
   "dependencies": {
-    "leaflet": "^1.9.4",
-    "leaflet-rotate": "^0.2.8",
+    "maplibre-gl": "^3.3.1",
     "quill": "^1.3.7"
   }
 }
